# Kirikiroid2

./: .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: android.yml
3rd/: .gitignore  build_prebuilt_lib.sh  download_3rd_lib.sh  makefile.unrar
3rd/prebuilt/ffmpeg/: CMakeLists.txt
3rd/prebuilt/google_breakpad/: CMakeLists.txt
3rd/prebuilt/libjpeg-turbo/: CMakeLists.txt
3rd/prebuilt/libogg/: CMakeLists.txt
3rd/prebuilt/libvorbis/: CMakeLists.txt
3rd/prebuilt/lz4/: CMakeLists.txt
3rd/prebuilt/opus/: CMakeLists.txt
3rd/prebuilt/opusfile/: CMakeLists.txt
3rd/prebuilt/unrar/: CMakeLists.txt
cocos2d/cocos/: CMakeLists.txt
cocos2d/cocos/platform/android/: CCFileUtils-android.h
cocos2d/cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxActivity.java
proj.android/: gradle.properties
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/jni/src/: SDL_android_main.cpp
proj.android/app/src/org/tvp/kirikiri2n/: KR2Activity.java  Kirikiroid2.java  MediaStoreHack.java
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
project/android/jni/src/: SDL_android_main.cpp
src/core/: CMakeLists.txt
src/core/base/: 7zArchive.cpp  UtilStreams.cpp
src/core/base/7zip/CPP/: .gitignore
src/core/base/7zip/CPP/7zip/UI/Console/: Main.cpp
src/core/base/7zip/CPP/ANDROID/7za/jni/: CMakeLists.txt
src/core/base/7zip/CPP/Common/: MyString.cpp  MyString.h  MyWindows.h
src/core/environ/: Application.cpp  XP3ArchiveRepack.cpp
src/core/environ/ConfigManager/: GlobalConfigManager.cpp
src/core/environ/android/: AndroidUtils.cpp
src/core/environ/cocos2d/: CustomFileUtils.cpp
src/core/environ/ui/: FileSelectorForm.cpp
src/core/sound/win32/: WaveMixer.cpp  tvpsnd.cpp
src/core/tjs2/: tjsConfig.cpp  tjsTypes.h  tjsUtils.h  tjsVariantString.cpp
src/core/visual/: FreeType.cpp  FreeTypeFontRasterizer.cpp  GraphicsLoaderIntf.cpp  LoadJPEG.cpp  RenderManager.cpp
src/core/visual/win32/: LayerBitmapImpl.cpp  NativeFreeTypeFace.cpp
src/plugins/: CMakeLists.txt
